# rusty-book-manager

./: Cargo.toml  Makefile.toml
.github/workflows/: ci.yaml
adapter/migrations/: 20241208150116_start.up.sql
adapter/src/database/: mod.rs
adapter/src/database/model/: book.rs
adapter/src/repository/: book.rs
api/: Cargo.toml
api/src/handler/: book.rs  health.rs
kernel/: Cargo.toml
kernel/src/model/book/: mod.rs
kernel/src/repository/: book.rs  health.rs
registry/src/: lib.rs
shared/src/: env.rs
src/: main.rs
