[package]
name = "rusty-book-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = ["api", "kernel", "adapter", "shared", "registry"]

[workspace.dependencies]
adapter = { path = "./adapter" }
api = { path = "./api" }
kernel = { path = "./kernel" }
shared = { path = "./shared" }
registry = { path = "./registry" }
anyhow = "1.0.93"
async-trait = "0.1.83"
axum = { version = "0.7.9", features = ["macros"] }
derive-new = "0.7.0"
serde = { version = "1.0.215", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "uuid", "chrono", "macros", "postgres", "migrate"] }
thiserror = "2.0.6"
tokio = { version = "1.41.1", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
rstest = "0.23.0"

[dependencies]
adapter.workspace = true
api.workspace = true
shared.workspace = true
registry.workspace = true
anyhow.workspace = true
axum.workspace = true
sqlx.workspace = true
tokio.workspace = true
